round 2 of trying to fix input sizing while displaying on iOS browsers

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -62,6 +62,9 @@
   color: white;
   outline: none;
   font-size: 16px;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .contact-input:-webkit-autofill,
@@ -82,6 +85,9 @@
   resize: none;
   outline: none;
   font-family: "Source Sans 3";
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 .checkbox-text {
